--- a/.vscode/tasks.json
+++ b/.vscode/tasks.json
@@ -6,7 +6,7 @@
         {
             "label": "compile_and_stage",
             "type": "shell",
-            "command": "lualatex master; bibtex master; lualatex master; lualatex master; git commit --all -m 'auto';git push --all",
+            "command": "lualatex master; bibtex master; lualatex master; lualatex master; git add --all; git commit --all -m 'auto';git push --all",
             "group": {
                 "kind": "build",
                 "isDefault": true
@@ -31,7 +31,7 @@
         {
             "label": "compile",
             "type": "shell",
-            "command": "lualatex master; bibtex master; lualatex master; lualatex master",
+            "command": "lualatex master; bibtex master",
             "problemMatcher": []
         }
     ]
