--- a/.vscode/tasks.json
+++ b/.vscode/tasks.json
@@ -8,7 +8,7 @@
             "type": "shell",
             //"command": "lualatex Presentation; bibtex Presentation; ./Presentation.pdf; lualatex master; bibtex master; ./master.pdf; lualatex master; lualatex master; git add --all; git commit --all -m 'auto';git push --all --force",
             // --force
-            "command": "lualatex master; bibtex master; ./master.pdf; lualatex master; lualatex master",
+            "command": "lualatex master; bibtex master; ./master.pdf; lualatex master; lualatex master; git add --all; git commit --all -m 'auto';git push --all --force",
             "group": {
                 "kind": "build",
                 "isDefault": true
